# jssat

./: .gitmodules  CONTRIBUTING.md  Cargo.toml  Makefile.toml  README.md  clippy.toml  todo
.github/workflows/: rust.yml
compiler/: Cargo.toml  build.rs  todo
compiler/src/: id.rs  interner.rs  isa.rs  main.rs  my_tests.rs  name.rs  poor_hashmap.rs  retag.rs
compiler/src/abst_interp/: mod.rs  possible-test-cases.txt
compiler/src/backend/: llvm.rs  mod.rs  runtime_glue.rs  skeleton.rs
compiler/src/backend/llvm/: compiler.rs  ir.rs
compiler/src/backend/llvm-oldtmp/: compiler.rs
compiler/src/backend/skeleton/: compiler.rs  ir.rs  llvm_glue.rs
compiler/src/backend/skeleton-oldtmp/: ir.rs  mod.rs
compiler/src/codegen/: display_program.rs  display_typed.rs  lower.rs  mod.rs  typed_program.rs
compiler/src/collections/: mod.rs  set.rs
compiler/src/frontend/: asm_opt_const_elim.rs  asm_opt_dead_register_elim.rs  assembler.rs  builder.rs  conv_only_bb.rs  display.rs  display_bb.rs  display_jssatir.rs  emitter.rs  ir.rs  isa.rs  js.rs  mod.rs  old_types.rs  retag.rs  skeleton_glue.rs  type_annotater.rs  types.rs  types.rs.tmp
compiler/src/frontend/js/: builder.rs  compiler.rs  frontend_pseudo.rs  frontend_swc.rs  ir.rs  mod.rs
compiler/src/frontend/js/ast/: emit_nodes.rs  mod.rs  parse_nodes.json  parser.rs
compiler/src/frontend/js/ast/parser/: decls.rs  exprs.rs  mod.rs  stmts.rs
compiler/src/frontend/js/ecmascript/: ECMA262Methods.lisp  ecma262_irfile.lisp  mod.rs
compiler/src/frontend/js/frontend_swc/: abstract_operations.rs  better.rs  descriptors.rs  environment_record.rs  mod.rs  ordinary_object_behaviors.rs
compiler/src/frontend/js/hosts/: jssat_host.rs  mod.rs
compiler/src/frontend/js/parse_nodes/: mod.rs  parse_nodes.json
compiler/src/frontend/types/: compiler.rs  ir.rs  mod.rs  monomorphizer.rs  skeleton_glue.rs
compiler/src/interpreter/: Tests.lisp  build.rs  mod.rs  tests.rs
compiler/src/ir/: builder.rs  mod.rs
compiler/src/isa/: add.rs  and.rs  assert.rs  atom.rs  blockjump.rs  call.rs  callextern.rs  callstatic.rs  callvirt.rs  control_flow.rs  equals.rs  get_runtime.rs  getfnptr.rs  is_type.rs  jump.rs  jumpif.rs  lessthan.rs  lists.rs  make.rs  makeboolean.rs  makebytes.rs  makeinteger.rs  maketrivial.rs  mod.rs  narrow.rs  negate.rs  newrecord.rs  noop.rs  or.rs  recordget.rs  recordhaskey.rs  records.rs  recordset.rs  ret.rs  unreachable.rs  widen.rs
compiler/src/lifted/: mod.rs
compiler/src/opt/: mod.rs
compiler/src/symbolic_execution/: assembler_glue.rs  graph_system.rs  mod.rs  type_computations.rs  types.rs  unique_id.rs  worker.rs
compiler/src/types/: assoc_eq.rs  list.rs  mod.rs  rec_ctx.rs  type_ctx.rs  type_relation.rs  union.rs
docs/: README.md  architecture.md  ast-traversal.md  jssat-ir.md
docs/jssatir_specification/: jssatir.hs  jssatir_specification.tex
docs/optimization/: README.md  dead-code-elimination.md  mangling.md  specialization.md
docs/type-system/: README.md
domino/: Cargo.toml  README.md  build.rs
domino/src/: data.rs  lib.rs  moment.rs  server.rs  server_data.rs
domino/webapp/: .babelrc  package-lock.json  package.json  tsconfig.json  webpack.config.js
domino/webapp/src/: api.ts  index.tsx  styles.css  styles.less
domino/webapp/src/adaptors/: irfile.tsx  jssatir.tsx  typetree.tsx
domino/webapp/src/components/: ShowError.tsx
domino/webapp/src/editor/: window.tsx
domino/webapp/src/panels/: SplitView.tsx
domino/webapp/src/panels/codeview/: CodeView.tsx  FrameView.tsx  SourceView.tsx
domino/webapp/src/panels/treeview/: TreeView.tsx
grammar_notation_helper/: Cargo.toml
grammar_notation_helper/benches/: real_world.rs
grammar_notation_helper/src/: ast.rs  codegen_rs.rs  lib.rs
ir_file/: Cargo.toml
ir_file/benches/: real_world.rs
ir_file/src/: ast.rs  codegen_rs.rs  lib.rs  parser.rs  threaded_state.rs
ir_file/src/parser/: mod.rs  node.rs  rules.rs
jssat_frontend_js/: Cargo.toml
jssat_frontend_js/src/: frontend_pseudo.rs  lib.rs
jssat_frontend_js/src/ast/: emit_nodes.rs  mod.rs  parse_nodes.rs
jssat_frontend_js/src/ast/parser/: decls.rs  exprs.rs  mod.rs  stmts.rs
jssat_frontend_js/src/ecmascript/: ECMA262Methods.lisp  mod.rs
jssat_frontend_js/src/hosts/: jssat_host.rs  mod.rs
jssat_interpreter/: Cargo.toml
jssat_interpreter/src/: Tests.lisp  build.rs  lib.rs  tests.rs
jssat_ir/: Cargo.toml
jssat_ir/src/: id.rs  lib.rs  pyramid_api.rs  retag.rs  value_snapshot.rs
jssat_ir/src/collections/: mod.rs  strict_zip.rs
jssat_ir/src/frontend/: builder.rs  emitter.rs  ir.rs  mod.rs  source_map.rs
jssat_ir/src/isa/: atom.rs  binop.rs  comment.rs  generalize.rs  lists.rs  make.rs  mod.rs  narrow.rs  records.rs  widen.rs
jssat_ir/src/lifted/: mod.rs
method_syntax/: Cargo.toml
method_syntax/src/: lib.rs
runtime/: Cargo.toml
runtime/src/: any.rs  gc.rs  lib.rs  module.rs  runtime.rs  string.rs
script_helpers/: .gitignore  README.md  grammar-notation.mjs  package-lock.json  package.json
src/: main.rs
src/ir/: builder.rs  formatting.rs  mod.rs
