[package]
name = "jssat"
version = "0.1.0"
authors = ["SirJosh3917 <SirJosh3917@users.noreply.github.com>"]
edition = "2018"

[features]
default = ["link-swc"]
# default = ["link-swc", "link-llvm"]

# Linking LLVM can take a minute or more. This feature is made optional so that
# debug builds, which often don't test the LLVM backend, can be faster.
link-llvm = ["inkwell"]

# Including SWC increases compile times by a significant amount, and at the time
# of writing this comment, the project is no-where near any sort of state to start
# parsing JS and emitting our typeless IR, so excluding it entirely is ideal.
link-swc = ["swc_atoms", "swc_common", "swc_ecmascript"]

[dependencies]
cc = "1.0.67"
petgraph = "0.5.1"
rustc-hash = "1.1.0"
swc_atoms = { version = "0.2.6", optional = true }
swc_common = { version = "0.10.20", features = ["tty-emitter"], optional = true }
swc_ecmascript = { version = "0.36.0", features = ["parser", "utils"], optional = true }
tempfile = "3.2.0"
bimap = "0.6.1"
ref-cast = "1.0.6"
assoc = "0.1.2"
tinyvec = { version = "1.2.0", features = ["alloc", "rustc_1_40"] }
derive_more = "0.99.16"
ordered-float = "2.7.0"
lasso = { version = "0.6.0", features = ["ahasher", "multi-threaded", "inline-more"] }
thiserror = "1.0.26"

[dependencies.inkwell]
git = "https://github.com/TheDan64/inkwell"
branch = "master"
features = ["llvm11-0"]
optional = true
