[package]
name = "domino"
version = "0.1.0"
edition = "2021"

[features]
default = ["server"]
server = ["tiny_http"]
moment = ["derive_more", "jssat_ir", "rustc-hash"]

[dependencies]
derive_more = { version = "0.99.16", optional = true }
jssat_ir = { path = "../jssat_ir", optional = true }
miniserde = "0.1.16"
rustc-hash = { version = "1.1.0", optional = true }
tiny_http = { version = "0.9.0", optional = true }

[[bin]]
name = "empty"
test = false
bench = false
required-features = ["moment"]
