[package]
name = "grammar_notation_helper"
version = "0.1.0"
edition = "2018"

[dependencies]
codegen = "0.1.3"
convert_case = "0.4.0"
derive_more = "0.99.16"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.71"

[dev-dependencies]
criterion = { version = "0.3.5", features = ["html_reports"] }

[[bench]]
name = "real_world"
harness = false
