[package]
name = "jssatrt"
version = "0.1.0"
authors = ["SirJosh3917 <SirJosh3917@users.noreply.github.com>"]
edition = "2018"

[lib]
name = "jssatrt"
crate-type = ["staticlib", "cdylib"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
hashbrown = "0.11.2"
mimalloc = "0.1.25"
