[package]
name = "jssatrt"
version = "0.1.0"
authors = ["SirJosh3917 <SirJosh3917@users.noreply.github.com>"]
edition = "2018"

[lib]
name = "jssatrt"
crate-type = ["staticlib", "cdylib"]

[dependencies]
hashbrown = { version = "0.11.2", default-features = false, features = ["ahash-compile-time-rng"] }
mimalloc = { path = "./mimalloc_rust" }
